loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:5: error: comp is already defined as variable comp
  var comp:Int= 0
      ^